--- a/meetups/templates/meetups/index.html
+++ b/meetups/templates/meetups/index.html
@@ -1,22 +1,28 @@
+{% extends 'meetups/base/base.html' %}
+
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Meetups</title>
-    <link rel="stylesheet" href="{% static 'meetups/styles/base.css' %}">
-  </head>
-  <body>
-    <h1>All Meetups!</h1>
-    <p>Hello World!</p>
-    {% if show_meetups %}
-      {% for meetup_item in meetups %}
-        <p>{{ meetup_item.title }}</p>
-      {% endfor %}
-    {% else %}
-      <p>No meetups found!</p>
-    {% endif %}
-  </body>
-</html>
+
+{% block title %}All Meetups{% endblock %}
+
+{% block site_css %}
+  <link rel="stylesheet" href="{% static 'meetups/styles/all-meetups.css' %}">
+{% endblock %}
+   
+{% block main_heading %}
+We got great meetups coming up!
+{% endblock %}
+
+{% block header_content %}
+<p>Find the one that best suits your needs!</p>
+{% endblock %}
+
+{% block body %}
+<section>
+  <h2>Upcoming Meetups</h2>
+  <ol>
+    {% for meetup_item in meetups %}
+      {% include 'meetups/includes/meetup-item.html' with title=meetup_item.title location=meetup_item.location %}
+    {% endfor %}
+  </ol>
+</section>
+{% endblock %}
